--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -7,8 +7,8 @@
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif: 'Quicksand', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif ;
-$font-family-serif:      Georgia, "Times New Roman", Times, serif ;
+$font-family-sans-serif: 'Open Sans Condensed', 'Quicksand', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif ;
+$font-family-serif:      'Playfair Display SC', Georgia, "Times New Roman", Times, serif ;
 $font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace ;
 $font-family-base:       $font-family-sans-serif ;
 
@@ -20,3 +20,22 @@ $font-weight-700: 700;
 
 
 $font-weight-bold: $font-weight-300;
+
+
+
+ $white: white;
+// Jumbotron
+
+
+ $jumbotron-bg: $white;
+
+
+
+
+$headings-color: $white;
+
+// links
+
+$brand-primary: $white;
+
+
